# objkit

./: .gitignore  Cargo.toml  README.md  cliff.toml  clippy.toml  release.toml
.github/workflows/: main.yml
examples/: as_any.rs  as_super.rs  clone_box.rs  obj_eq.rs
objkit-macros/: Cargo.toml
objkit-macros/src/: lib.rs
objkit-macros/src/as_any/: aux_trait.rs  mod.rs
objkit-macros/src/as_super/: aux_trait.rs  mod.rs
objkit-macros/src/clone_box/: mod.rs
objkit-macros/src/downcast/: mod.rs
objkit-macros/src/obj_eq/: aux_trait.rs  mod.rs
objkit-macros/src/obj_send_sync/: mod.rs
objkit-macros/src/obj_visitor/: mod.rs
objkit-macros/src/proxy/: mod.rs
objkit-shared/: Cargo.toml
src/: lib.rs
tests/: as_any_edge_tests.rs  as_any_integration_tests.rs  as_super_edge_tests.rs  as_super_integration_tests.rs  clone_box_integration_tests.rs  clone_box_interior_mutability.rs  obj_eq_edge_tests.rs  obj_eq_integration_tests.rs
traitkit-macros/: Cargo.toml
traitkit-macros/src/: lib.rs
traitkit-macros/src/clone_box/: direct.rs  mod.rs
traitkit-shared/: Cargo.toml
traitkit-shared/src/: lib.rs
