[workspace]
members = ["traitkit-macros", "traitkit-shared"]

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.64.0"
authors = ["orgrinrt", "Hiisi Digital"]

[workspace.dependencies]
proc-macro2 = { version = "^1.0" }
quote = { version = "^1.0", features = ["proc-macro"] }
syn = { version = "^2.0.0", features = ["full"] }
include_proc_macro = "2.0.6"
traitkit-shared = { path = "traitkit-shared" }
traitkit-macros = { path = "traitkit-macros" }

[package]
name = "traitkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = """
A toolkit providing minimal-cost abstractions of well-established patterns for trait object operations that aren't supported by rust's trait system directly, such as cloning, comparison, and conversion
"""
license-file = "LICENSE"
readme = "README.md"
keywords = []
categories = []
documentation = "https://docs.rs/traitkit"
homepage = "https://github.com/orgrinrt/traitkit"
repository = "https://github.com/orgrinrt/traitkit"

[dependencies]
traitkit-macros.workspace = true
#traitkit-shared.workspace = true

[features]
default = []

[clippy]
default-features = true
extra-plugins = [
    "clippy::pedantic",
    "clippy::cargo",
    "+clippy::nursery",
    "+clippy::style",
    "+clippy::complexity",
    "+clippy::perf",
    "+clippy::correctness",
    "+clippy::suspicious",
    "+clippy::deprecated"
]
