[workspace]
members = ["objkit-macros"]

[workspace.package]
version = "0.0.2"
edition = "2021"
rust-version = "1.64.0"
authors = ["orgrinrt", "Hiisi Digital"]

[workspace.dependencies]
proc-macro2 = { version = "^1.0" }
quote = { version = "^1.0", features = ["proc-macro"] }
syn = { version = "^2.0.0", features = ["full"] }
include_proc_macro = "2.0.6"
objkit-macros = { path = "objkit-macros", version = "^0" }

[package]
name = "objkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = """
A toolkit providing convenient abstractions for trait object operations that aren't supported by rust's trait system directly, such as cloning, comparison, and conversion
"""
license-file = "LICENSE"
readme = "README.md"
keywords = []
categories = []
documentation = "https://docs.rs/objkit"
homepage = "https://github.com/orgrinrt/objkit"
repository = "https://github.com/orgrinrt/objkit"

[dependencies]
objkit-macros.workspace = true

[features]
default = []
