[package]
name = "objkit-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
proc-macro2.workspace = true
include_proc_macro.workspace = true
#objkit-shared.workspace = true

[features]
